# mined_out

./: .gitignore  LICENSE  README.md  TODO.org  claude.py  pyproject.toml
docs/: IDEAS.md
src/mined_out/: audio_operations.py  common.py  config.py  constants.py  game.py  game_logic.py  game_renderer.py  game_state.py  grid_analyzer.py  grid_builder.py  grid_operations.py  grid_utils.py  input_handler.py  input_operations.py  level.py  level_generation.py  level_generator.py  main.py  minefield.py  movement.py  movement_handler.py  pathfinding.py  proximity.py  renderer.py  rendering_operations.py  replay.py  scoring.py  sound_manager.py  types.py
src/mined_out_new/: main.py  minefield.py  user_input.py
tests/: test_foo.py  test_game.py  test_grid_builder.py  test_grid_operations.py  test_level.py  test_main.py  test_mined_out.py  test_minefield.py  test_movements.py  test_pathfinding.py  test_proximity.py  test_renderer.py  test_replay.py  test_scoring.py  test_types.py
